--- a/BaseProject/Core/BaseProject.UI/src/app/users/create-user/create-user.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/users/create-user/create-user.component.html
@@ -110,8 +110,12 @@
 
                   <div *ngIf="f.confirmPassword.errors" class="invalid-feedback">                      
                       <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
-                  </div>
-                  
+                  </div>                  
+              </div>
+
+              <div class="form-check" *ngFor="let role of roles">
+                <input type="checkbox" class="form-check-input" (change)="rolChecked(role)" [checked]=role.checked>
+                <label>{{role.name}}</label>
               </div>
           
             <div class="form-group">
