--- a/BaseProject/Core/BaseProject.UI/src/app/users/edit-user/edit-user.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/users/edit-user/edit-user.component.html
@@ -53,6 +53,12 @@
         />
       </div>
 
+  
+      <div class="form-check" *ngFor="let role of roles">
+        <input type="checkbox" class="form-check-input" (change)="rolChecked(role)" [checked]=role.checked>
+        <label>{{role.name}} </label>
+      </div>
+
       <div class="form-group">
         <button
           class="btn btn-success mr-2"
@@ -65,6 +71,8 @@
           Cancel
         </button>
       </div>
+
+      
     </form>
   </div>
 </div> 
