--- a/BaseProject/Core/BaseProject.UI/src/app/users/edit-user/edit-user.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/users/edit-user/edit-user.component.html
@@ -55,7 +55,10 @@
 
   
       <div class="form-check" *ngFor="let role of roles">
-        <input type="checkbox" class="form-check-input" (change)="rolChecked(role)" [checked]=role.checked>
+        <input type="checkbox" class="form-check-input" 
+              (change)="role.checked=!role.checked" 
+              [checked]=role.checked
+              >
         <label>{{role.name}} </label>
       </div>
 
