--- a/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
@@ -17,7 +17,7 @@
       </a>
 
       <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item" [routerLink]="['/member/edit']"> 
+        <a class="dropdown-item" > 
           <i class="fa fa-user"></i> Edit Profile</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">
@@ -29,3 +29,8 @@
 
 
 </nav>
+
+<div class="container">
+  <router-outlet>            
+  </router-outlet>
+</div>
