--- a/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.css
+++ b/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.css
@@ -1,12 +1,12 @@
-.dropdown-toggle, .dropdown-item {
-    cursor: pointer;
-}
-    img {
-    max-height: 50px;
-    border: 2px solid white;
-    display: inline;
-}
+.example-icon {
+    padding: 0 27px;
+  }
+  
+  .example-spacer {
+    flex: 1 1 auto;
+  }
 
-.container {
-    margin-top: 20px;
+a {
+    text-decoration: none;
+    color: white;
 }
