--- a/BaseProject/Core/BaseProject.UI/src/styles.css
+++ b/BaseProject/Core/BaseProject.UI/src/styles.css
@@ -6,7 +6,8 @@
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
 @import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
-@import '~perfect-scrollbar/css/perfect-scrollbar.css';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 
 .page-link{
     background-color: #2C3E50 !important;    
@@ -16,3 +17,5 @@
 .panel-title{
     cursor: pointer;   
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
