--- a/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
@@ -47,7 +47,9 @@
     </a>
 
     <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">home</mat-icon> Home
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">person_outline</mat-icon> User
+    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">person_outline</mat-icon> app-create-user
+
+    
   </mat-toolbar-row>
 
 </mat-toolbar>
