--- a/BaseProject/Core/BaseProject.UI/src/app/users/list-user/list-user.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/users/list-user/list-user.component.html
@@ -1,110 +1,64 @@
-<div class="container-fluid">
 
-  <div class="row">
-    <div class="col-12">
-      <button class="btn btn-primary" type="button" (click)="createUser()">
-        <i class="fa fa-plus"></i> Create
-      </button>
-    </div>
-  </div>
-
-  <br />
-  <div class="row">
-    <div class="col-12">
-      <accordion>
-        <accordion-group heading="Filters" [isOpen]="true">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="form-group">
-                <label class="">Email</label>
-                <input type="text" class="form-control" />
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-              <div class="col-md-4">
-                  <div class="form-group">
-                      <button
-                        class="btn btn-success mr-2"                        
-                        type="submit">
-                        Search
-                      </button>
-                      <button class="btn btn-secondary" type="button" >
-                        Clear
-                      </button>
-                    </div>
-              </div>
-          </div>
-        </accordion-group>
-      </accordion>
-    </div>
-  </div>
-  <br />
-  <div class="row">
-    <div class="col-12">
-      <div class="card border-primary mb-3">
-        <div class="card-header">Users</div>
-        <div class="card-body">
-          <!-- <h4 class="card-title">Primary card title</h4> -->
-          <table class="table">
-            <thead>
-              <tr class="table-active">
-                <th scope="col">First Name</th>
-                <th scope="col">Last Name</th>
-                <th scope="col">Email</th>
-                <th scope="col" class="text-center"></th>
-              </tr>
-            </thead>
-            <tbody>
-
-              <tr class="text-center" *ngIf="isLoading">
-                <td colspan="12"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></td>
-              </tr>
-              <tr class="text-center" *ngIf="users?.length==0 || isLoading">
-                no found results
-              </tr>
-              <tr *ngFor="let user of users">
-                <th scope="row">{{ user.firstName }}</th>
-                <th scope="row">{{ user.lastName }}</th>
-                <th scope="row">{{ user.email }}</th>
-
-                <td class="text-center">
-                  <button tooltip="Edit" class="btn btn-warning btn-sm mr-2" type="button" (click)="goToEdit(user)">
-                    <i class="fa fa-pencil"></i>
-                  </button>
-
-                  <button class="btn btn-danger btn-sm" tooltip="Remove" type="button"
-                    (click)="removeConfirm(user,template)">
-                    <i class="fa fa-remove"></i>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-            <tfoot></tfoot>
-          </table>
-          <div class="d-flex justify-content-center" *ngIf="users?.length">
-            <pagination [boundaryLinks]="true" [totalItems]="pagination.totalRecords"
-              [(ngModel)]="pagination.pageNumber" [itemsPerPage]="pagination.pageSize"
-              (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;"
-              lastText="&raquo;">
-            </pagination>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<ng-template #template>
-  <div class="modal-header ">
-    <h4 class="modal-title text-dark">Delete User</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
+<div class="example-button-row margin-bottom-20">   
+    <button mat-raised-button color="primary" (click)="createUser()">
+        <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+      Create
     </button>
-  </div>
-  <div class="modal-body text-center">
-    <p>Do you want to delete to {{userToDelete.email}}?</p>
-    <button type="button" class="btn btn-default" (click)="confirm()">Yes</button>
-    <button type="button" class="btn btn-primary" (click)="decline()">No</button>
-  </div>
-</ng-template>
+</div>
+  
+<div class="margin-bottom-20 ">
+    <mat-accordion >
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+          <mat-expansion-panel-header >
+            <mat-panel-title >
+              <i class="material-icons">filter_list</i>
+              Filters
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          
+          <mat-form-field>
+              <input matInput placeholder="Email">
+          </mat-form-field>
+    
+        </mat-expansion-panel>
+    </mat-accordion>
+</div>
+
+
+<div class="mat-elevation-z8 ">
+    <table mat-table [dataSource]="users" matSort>
+  
+      <!--First Name Column -->
+      <ng-container matColumnDef="firstName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+          <td mat-cell *matCellDef="let row"> {{row.firstName}} </td>
+        </ng-container>
+
+          <!--Last Name Column -->
+      <ng-container matColumnDef="lastName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+          <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
+        </ng-container>
+
+      <!-- Email Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+      </ng-container>
+  
+    
+  
+     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> 
+    </table>
+  
+    <mat-paginator #paginator
+    [length]="pagination.totalRecords"
+    
+    [pageSize]="pagination.pageSize"
+    showFirstLastButtons
+    [pageSizeOptions]="[5,25, 50, 100, 250]">
+    <!-- [pageIndex]="pagination.pageNumber -->
+</mat-paginator>
+</div>
