--- a/BaseProject/Core/BaseProject.UI/src/app/auth/login/login.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/auth/login/login.component.html
@@ -1,65 +1,25 @@
 
-
-<div class="row justify-content-center" id="formLogin">
-  <div class="col-6 align-self-center">
-    <div class="card">
-      <div class="card-header">
-        <h2 class="text-center text-primary">Sign in</h2>
-      </div>
-
-      <div class="card-body">
+<div class="signin-content">
+    <mat-card>
+      <mat-card-content>
         <form [formGroup]="loginForm" (ngSubmit)="login()">
-          <div class="form-group">
-            <label>Email</label>
-            <input
-              type="email"
-              [ngClass]="{
-                'is-invalid':
-                  loginForm.get('email').errors &&
-                  loginForm.get('email').touched
-              }"
-              class="form-control"
-              formControlName="email"
-              placeholder="Email"
-            />
-            <div class="invalid-feedback">Please choose a Email</div>
-          </div>
+          <p>Sign in</p>
+          <mat-form-field class="full-width-input">
+            <input matInput placeholder="Email" formControlName="email" required>
+            <mat-error *ngIf="loginForm.get('email').errors">
+                Email is required
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="full-width-input">
+            <input matInput type="password" placeholder="Password" formControlName="password"  [type]="hide ? 'password' : 'text'" required>
+            <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            <mat-error *ngIf="loginForm.get('password').errors">
+                Password is required
+            </mat-error>
 
-          <div class="form-group">
-            <label>Password</label>
-            <input
-              type="password"
-              [ngClass]="{
-                'is-invalid':
-                  loginForm.get('password').errors &&
-                  loginForm.get('password').touched
-              }"
-              class="form-control"
-              formControlName="password"
-              placeholder="Password"
-            />
-            <div
-              class="invalid-feedback"
-              *ngIf="
-                loginForm.get('password').hasError('required') &&
-                loginForm.get('password').touched
-              "
-            >
-              Password is required
-            </div>
-          </div>
-
-          <div class="form-group">
-            <button
-              class="btn btn-success"
-              [disabled]="!loginForm.valid"
-              type="submit"
-            >
-              Submit
-            </button>
-          </div>
+          </mat-form-field>
+          <button mat-raised-button color="primary">Login</button>
         </form>
-      </div>
-    </div>
+      </mat-card-content>
+    </mat-card>
   </div>
-</div>
