--- a/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
@@ -1,57 +1,32 @@
-<!-- <nav class="navbar navbar-expand-md navbar-dark bg-primary" *ngIf="authService.loggedIn()">
-  <div class="container">
-    <a class="navbar-brand" [routerLink]="['/home']">Base Project</a>
-
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/users']" >Users</a>
-      </li>
-    </ul>
-
-    <div *ngIf="loggedIn()" class="dropdown" dropdown>
-        <span class="mr-1">
-            <img src="{{'../../../assets/user.png'}}" alt="Profile">
-          </span>
-      <a class="dropdown-toggle text-light" dropdownToggle>
-        Welcome {{authService.decodedToken?.sub | titlecase}}
-      </a>
-
-      <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item" > 
-          <i class="fa fa-user"></i> Edit Profile</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="logout()">
-          <i class="fa fa-sign-out"></i> Logout</a>
-      </div>
-    </div>
-    
-  </div>
-
-
-</nav>
-
-<div class="container">
-  <router-outlet>            
-  </router-outlet>
-</div> -->
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" *ngIf="authService.loggedIn()">
   <mat-toolbar-row>
     <span>Base Project</span>
-
+    <span class="example-fill-remaining-space"></span>
+    <span class="align-center"></span>
     <span class="example-spacer"></span>
-
-    <a
-      [routerLink]="['/users']">
-      <mat-icon>home</mat-icon>
-      Users
-    </a>
-
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">home</mat-icon> Home
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">person_outline</mat-icon> nuser
-
-
+    <button mat-button>User</button>
+    <button mat-button  (click)="logout()">Logout</button>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>
+        <mat-icon>dialpad</mat-icon>
+        <span>Redial</span>
+      </button>
+      <button mat-menu-item disabled>
+        <mat-icon>voicemail</mat-icon>
+        <span>Check voicemail</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>notifications_off</mat-icon>
+        <span>Disable alerts</span>
+      </button>
+    </mat-menu>
   </mat-toolbar-row>
-
 </mat-toolbar>
-<router-outlet>            
-</router-outlet>
+
+<div class="container-fluid">
+    <router-outlet> </router-outlet>
+</div>
+
