--- a/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
     <span class="example-fill-remaining-space"></span>
     <span class="align-center"></span>
     <span class="example-spacer"></span>
-    <button mat-button>User</button>
+    <button mat-button [routerLink]="['/users']">User</button>
     <button mat-button  (click)="logout()">Logout</button>
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
