--- a/BaseProject/Core/BaseProject.UI/src/app/users/list-user/list-user.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/users/list-user/list-user.component.html
@@ -46,11 +46,10 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
         <td mat-cell *matCellDef="let row"> {{row.email}} </td>
       </ng-container>
-  
-    
-  
+
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> 
+    <tr  class="pointer" mat-row *matRowDef="let row; columns: displayedColumns;" (click)="goToEdit(row)"></tr> 
+    
     </table>
   
     <mat-paginator #paginator
