--- a/BaseProject/Core/BaseProject.UI/src/app/users/create-user/create-user.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/users/create-user/create-user.component.html
@@ -84,7 +84,7 @@
   <div class="radio-roles">
       <label>Roles: </label>
       <mat-radio-group formControlName="roles">
-        <mat-radio-button value="role.name" *ngFor="let role of roles">{{role.name}}</mat-radio-button>
+          <mat-radio-button (change)="rolChecked(role)" [checked]=role.checked value="role.name" *ngFor="let role of roles">{{role.name}}</mat-radio-button>
       </mat-radio-group>
     </div>
 
