--- a/BaseProject/Core/BaseProject.UI/src/app/users/create-user/create-user.component.css
+++ b/BaseProject/Core/BaseProject.UI/src/app/users/create-user/create-user.component.css
@@ -8,3 +8,12 @@
   .radio-roles{
       margin: 0px;
   }
+
+
+  mat-radio-group{
+    margin-left: 20px;
+  }
+
+  mat-radio-button{
+    margin-left: 10px;
+  }
