--- a/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/nav/nav.component.html
@@ -1,28 +1,27 @@
 <mat-toolbar color="primary" *ngIf="authService.loggedIn()">
   <mat-toolbar-row>
     <span>Base Project</span>
-    <span class="example-fill-remaining-space"></span>
-    <span class="align-center"></span>
-    <span class="example-spacer"></span>
+   
     <button mat-button [routerLink]="['/users']">User</button>
-    <button mat-button  (click)="logout()">Logout</button>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
+    <!-- <button mat-button >Logout</button> -->
+    <div class="right"> 
+        <button mat-icon-button [matMenuTriggerFor]="menu" class="">
+            {{authService.decodedToken?.sub | titlecase}}
+          <mat-icon>more_vert</mat-icon>
+        </button>
+    </div>
+
+    <mat-menu #menu="matMenu" class="">
       <button mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>Redial</span>
+        <mat-icon>perm_identity</mat-icon>
+        <span>Profile</span>
       </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Check voicemail</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>notifications_off</mat-icon>
-        <span>Disable alerts</span>
+      <button mat-menu-item  (click)="logout()">
+        <mat-icon>power_settings_new</mat-icon>
+        <span>Logout</span>
       </button>
     </mat-menu>
+
   </mat-toolbar-row>
 </mat-toolbar>
 
