--- a/BaseProject/Core/BaseProject.UI/src/app/users/list-user/list-user.component.html
+++ b/BaseProject/Core/BaseProject.UI/src/app/users/list-user/list-user.component.html
@@ -96,9 +96,10 @@
  
 
     <mat-paginator #paginator
-        [length]="filters.totalRecords"
-        [pageSize]="filters.pageSize"
+       
+        [pageSize]="5"
         (page)="pageChanged($event)"
+        [length]="filters.totalRecords"
         showFirstLastButtons
         [pageSizeOptions]="[5,25, 50, 100, 250]">
       <!-- [pageIndex]="pagination.pageNumber -->
